fix: add z-index for dialog overlay

--- a/packages/raystack/dialog/dialog.module.css
+++ b/packages/raystack/dialog/dialog.module.css
@@ -22,7 +22,7 @@
 .overlay {
   position: fixed;
   inset: 0;
-
+  z-index: 49;
   background-color: rgba(0, 0, 0, 0.15);
 }
 
